<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/SplashMainName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/kodchasan_bold"
        android:gravity="center"
        android:text="@string/mainName"
        android:textColor="@color/green"
        android:textSize="80sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="425dp"
        android:layout_height="117dp"
        android:layout_gravity="center"
        android:fontFamily="@font/kodchasan_bold"
        android:gravity="center"
        android:text="@string/mainSplashMessage"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/green"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="298dp"
        android:layout_height="212dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/hotpot_icon"
        android:contentDescription="@string/hotpotIconExplanation"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <Button
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/hotpot_green"
            android:fontFamily="@font/kodchasan_bold"
            android:text="@string/loginString"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/hotpot_light_green"
            android:fontFamily="@font/kodchasan_bold"
            android:text="@string/signupString"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
