<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="129dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="128dp"
                android:layout_height="126dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/hotpotIconExplanation"
                android:src="@drawable/hotpot_icon" />

            <Button
                android:id="@+id/register_signUp_tab"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:backgroundTint="@color/hotpot_green"
                android:fontFamily="@font/kodchasan_bold"
                android:text="@string/signupString"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/register_signIn_tab"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/transparent"
                android:fontFamily="@font/kodchasan_bold"
                android:text="@string/loginString"
                android:textAllCaps="false"
                android:textColor="@color/hotpot_dark_green"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kodchasan_bold"
                android:gravity="center"
                android:text="@string/signupString"
                android:textColor="@color/hotpot_green"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kodchasan_bold"
                android:gravity="center"
                android:scaleX="1.1"
                android:scaleY="1.2"
                android:text="@string/signupSplashMessage"
                android:textColor="#26783D"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="37dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/nameString"
                    android:textColor="@color/hotpot_dark_green" />

                <EditText
                    android:id="@+id/signUpName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/edit_ext"
                    android:backgroundTint="@color/hotpot_dark_green"
                    android:drawableEnd="@drawable/checkmark"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:scaleX=".8"
                    android:autofillHints="name"
                    android:hint="@string/nameHint"/>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="37dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/emailString"
                    android:textColor="@color/hotpot_dark_green" />

                <EditText
                    android:id="@+id/signUpEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/edit_ext"
                    android:backgroundTint="@color/hotpot_dark_green"
                    android:drawableEnd="@drawable/checkmark"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textEmailAddress"
                    android:scaleX=".8"
                    android:autofillHints="emailAddress"
                    android:hint="@string/emailHint"/>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="37dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/passwordString"
                    android:textColor="@color/hotpot_dark_green" />

                <EditText
                    android:id="@+id/signUpPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/edit_ext"
                    android:backgroundTint="@color/hotpot_dark_green"
                    android:drawableEnd="@drawable/checkmark"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:scaleX="0.8"
                    android:hint="@string/passwordHint"
                    android:autofillHints="password"/>

                <TextView
                    android:id="@+id/passwordCriteriaTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="45dp"
                    android:drawablePadding="8dp"
                    android:singleLine="false"
                    android:text=""
                    android:textColor="@color/black"
                    android:visibility="gone" />


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:padding="1dp"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/signUp_signUp_btn"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/hotpot_green"
            android:fontFamily="@font/kodchasan_bold"
            android:text="@string/signupString"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</FrameLayout>