<!-- activity_main.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Background Image or Color -->
    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/accountbackground"
        android:scaleType="centerCrop"
        android:contentDescription="@string/backgroundImageExplanaton"/>

    <!-- LinearLayout for Your Content -->

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include layout="@layout/toolbar_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/accountContentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_marginBottom="32dp"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="16dp">


        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="100dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="false">


            <ImageView
                android:id="@+id/profilePictureImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/profile_picture"
                android:scaleType="centerCrop"
                android:src="@drawable/me" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profileNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/abel"
                android:gravity="center"
                android:textColor="@color/black"
                android:hint="Username"
                android:singleLine="true"
                android:text="Test"
                android:textSize="45dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profileTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/abeezee"
                android:gravity="center"
                android:hint="Bio"
                android:textSize="20dp" />

        </LinearLayout>

        <Button
            android:id="@+id/fridgeButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:backgroundTint="@color/hotpot_green"
            android:fontFamily="@font/kodchasan_bold"
            android:foreground="@drawable/circular_outline_background"
            android:text="@string/fridge_text"
            android:textColor="@color/hotpot_dark_green"
            android:textSize="18sp" />

        <Button
            android:id="@+id/allergyButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/hotpot_green"
            android:fontFamily="@font/kodchasan_bold"
            android:foreground="@drawable/circular_outline_background_2"
            android:text="@string/set_allergy"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/favouritesButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/hotpot_green"
            android:fontFamily="@font/kodchasan_bold"
            android:foreground="@drawable/circular_outline_background_2"
            android:text="@string/favouriteRecipesButton"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation">
    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginBottom="0dp"
        android:background="@color/white"
        app:itemIconTint="@color/hotpot_dark_green"
        app:itemTextColor="@color/hotpot_dark_green"
        app:layout_anchorGravity="bottom"
        app:menu="@menu/bottom_navigation_menu" />

</RelativeLayout>
